objects/Demo_Copodo__c.object
<CustomObject>
    <label>Demo Copodo</label>
    <nameField>
        <label>Demo Copodo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Copodos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Demo_Date__c</fullName>
        <label>Demo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Count__c</fullName>
        <displayFormat>D-{000}</displayFormat>
        <label>Demo Count</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Demo_Email__c</fullName>
        <label>Demo Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Demo_Phone__c</fullName>
        <label>Demo Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Demo_Choice__c</fullName>
        <label>Demo Choice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Description__c</fullName>
        <label>Demo Description</label>
        <type>TextArea</type>
    </fields>
</CustomObject>